# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import productsRouter from "./products";
+import inventoryLogsRouter from "./inventory-logs";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(productsRouter);
+router.use(inventoryLogsRouter);
 
 export default router;
